--- a/visualize.html
+++ b/visualize.html
@@ -3,6 +3,7 @@
 <link rel="stylesheet" href="visualize.css" type="text/css" media="all"/>
 </head>
 <body onload="init()">
+<script type="text/javascript" src="jquery-1.6.2.js"></script>
 <script type="text/javascript" src="sha1.js"></script>
 <script type="text/javascript" src="visualize.js"></script>
 <p>
