On init, make a hidden copy of the messages div so we get the correct spacing

--- a/visualize.html
+++ b/visualize.html
@@ -2,7 +2,7 @@
 <title>Visual SHA-1</title>
 <link rel="stylesheet" href="visualize.css" type="text/css" media="all"/>
 </head>
-<body onload="init()">
+<body>
 <script type="text/javascript" src="jquery-1.6.2.js"></script>
 <script type="text/javascript" src="sha1.js"></script>
 <script type="text/javascript" src="visualize.js"></script>
@@ -268,63 +268,7 @@
   </tbody>
 </table>
 <p>
-    This is padding because I don't know css.</br>
-    This is padding because I don't know css.</br>
-    This is padding because I don't know css.</br>
-    This is padding because I don't know css.</br>
-    This is padding because I don't know css.</br>
-    This is padding because I don't know css.</br>
-    This is padding because I don't know css.</br>
-    This is padding because I don't know css.</br>
-    This is padding because I don't know css.</br>
-    This is padding because I don't know css.</br>
-    This is padding because I don't know css.</br>
-    This is padding because I don't know css.</br>
-    This is padding because I don't know css.</br>
-    This is padding because I don't know css.</br>
-    This is padding because I don't know css.</br>
-    This is padding because I don't know css.</br>
-    This is padding because I don't know css.</br>
-    This is padding because I don't know css.</br>
-    This is padding because I don't know css.</br>
-    This is padding because I don't know css.</br>
-    This is padding because I don't know css.</br>
-    This is padding because I don't know css.</br>
-    This is padding because I don't know css.</br>
-    This is padding because I don't know css.</br>
-    This is padding because I don't know css.</br>
-    This is padding because I don't know css.</br>
-    This is padding because I don't know css.</br>
-    This is padding because I don't know css.</br>
-    This is padding because I don't know css.</br>
-    This is padding because I don't know css.</br>
-    This is padding because I don't know css.</br>
-    This is padding because I don't know css.</br>
-    This is padding because I don't know css.</br>
-    This is padding because I don't know css.</br>
-    This is padding because I don't know css.</br>
-    This is padding because I don't know css.</br>
-    This is padding because I don't know css.</br>
-    This is padding because I don't know css.</br>
-    This is padding because I don't know css.</br>
-    This is padding because I don't know css.</br>
-    This is padding because I don't know css.</br>
-    This is padding because I don't know css.</br>
-    This is padding because I don't know css.</br>
-    This is padding because I don't know css.</br>
-    This is padding because I don't know css.</br>
-    This is padding because I don't know css.</br>
-    This is padding because I don't know css.</br>
-    This is padding because I don't know css.</br>
-    This is padding because I don't know css.</br>
-    This is padding because I don't know css.</br>
-    This is padding because I don't know css.</br>
-    This is padding because I don't know css.</br>
-    This is padding because I don't know css.</br>
-    This is padding because I don't know css.</br>
-</p>
-<p>
-<div align="center" class="messages">
+<div align="center" id="messages" class="messages transparent">
     <table width="100%">
       <tr><div align="center">M<sub>1</sub></div></th></tr>
       <tr id="M1">
